--- a/moveit-next/src/styles/components/Contdown.module.css
+++ b/moveit-next/src/styles/components/Contdown.module.css
@@ -45,7 +45,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 0px;
+  border: none;
   border-radius: 5px;
 
   background: var(--blue);
@@ -57,6 +57,22 @@
   transition: all 0.2s;
 }
 
-.startCountdownButton:hover{
+.startCountdownButton:not(:disabled):hover{
   background: var(--blue-dark);
+}
+
+.startCountdownButtonActive{
+  background: var(--white);
+  color: var(--title);
+}
+
+.startCountdownButtonActive:not(:disabled):hover{
+  background: var(--red);
+  color: var(--title);
+}
+
+.startCountdownButton:disabled{
+  cursor: not-allowed;
+  background: var(--white);
+  color: var(--text);
 }
